# Robot-Simulation-Environment

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: default.yaml
demo/: app.py
notebooks/: tutorial.ipynb
scripts/: run_demo.py
src/: __init__.py
src/planners/: __init__.py  path_planners.py
src/robots/: __init__.py  models.py
src/simulation/: __init__.py  environment.py
src/utils/: __init__.py  evaluation.py
tests/: test_simulation.py
